service-movies-ui/k8s/manifest-files/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-movies-ui
spec:
  selector:
    app: service-movies-ui
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8091
      targetPort: 8080
